# kl3m-data

./: .gitignore  .pre-commit-config.yaml  README.md  config.json  pyproject.toml
config/loader/mlm/: kl3m-doc-pico-long.json
docker/: Dockerfile  run.sh  setup.sh
docs/: DATA.md  PARSERS.md  PIPELINE.md  SOURCES.md
kl3m_data/: __init__.py  config.py  logger.py
kl3m_data/api/: api.py
kl3m_data/api/loader/: base.py  hf.py
kl3m_data/api/loader/task/: base.py  clm.py  lmlm.py  mlm.py  pmlm.py
kl3m_data/cli/: __init__.py  db.py  edgar.py  extract_raw_files.py  filter_config.json  filters.py  hf.py  info.py  main.py  parquet.py  parquet_to_jsonl.py  parsers.py  pipeline.py  sources.py
kl3m_data/db/: documents.py
kl3m_data/metrics/: quality_metrics.py
kl3m_data/parsers/: converters.py  eu_oj_xml.py  generic_html.py  generic_json.py  generic_object.py  generic_pdf.py  generic_tika.py  generic_xml.py  generic_zip.py  parser.py  parser_types.py
kl3m_data/parsers/filters/: __init__.py  verdate.py
kl3m_data/parsers/mdtransformer/: auto_parser.py  lxml_parser.py  regex_parser.py
kl3m_data/parsers/mdtransformer/base/: html_types.py  markdown_types.py  parser.py  parser_config.py
kl3m_data/parsers/xsl/: eu_oj.xsl
kl3m_data/pipeline/s3/: README.md  __init__.py  dataset.py  hf.py
kl3m_data/sources/: __init__.py  base_document.py  base_source.py
kl3m_data/sources/eu/eu_oj/: __init__.py  eu_oj.py
kl3m_data/sources/eu/eurlex_oj/: __init__.py
kl3m_data/sources/uk/uk_legislation/: __init__.py  uk_legislation_source.py
kl3m_data/sources/us/: __init__.py
kl3m_data/sources/us/cap/: cap_source.py
kl3m_data/sources/us/cwf/: cwf_source.py
kl3m_data/sources/us/dockets/: __init__.py  dockets_source.py
kl3m_data/sources/us/dotgov/: __init__.py  dotgov_source.py
kl3m_data/sources/us/ecfr/: __init__.py  ecfr_source.py  ecfr_types.py  v1.json
kl3m_data/sources/us/edgar/: __init__.py  edgar_source.py
kl3m_data/sources/us/fdlp/: __init__.py  fdlp_source.py  fdlp_types.py
kl3m_data/sources/us/fr/: __init__.py  fedregister.xsl  fr_source.py  fr_types.py
kl3m_data/sources/us/govinfo/: __init__.py  govinfo_source.py  govinfo_types.py
kl3m_data/sources/us/recap/: __init__.py  recap_source.py
kl3m_data/sources/us/recap_docs/: __init__.py  recap_docs_source.py
kl3m_data/sources/us/reg_docs/: __init__.py  reg_docs_source.py
kl3m_data/sources/us/usc/: __init__.py  usc_source.py  usc_types.py
kl3m_data/sources/us/uspto_patents/: __init__.py  grant_url_list.txt  uspto_patents_source.py
kl3m_data/utils/: httpx_utils.py  parquet_utils.py  s3_utils.py  tika_utils.py  uu_utils.py
paper/: Outline.md  abstract.tex  appendix.tex  article-min.bib  collection_process.tex  conclusion.tex  copyright_priorwork.tex  data_sources.tex  dataset_characteristics.tex  introduction.tex  main.tex  old_appendix.tex  pre_processing.tex
paper/appendix/: cap.tex  dockets.tex  dotgov.tex  ecfr.tex  edgar.tex  eu_oj.tex  fdlp.tex  fr.tex  govinfo.tex  recap.tex  recap_docs.tex  reg_docs.tex  ukleg.tex  usc.tex  uspto.tex
scripts/: dotgov_datasets.txt  govinfo_datasets.txt  push_to_hf.sh  update_counts.sh
