[tool.poetry]
name = "kl3m-data"
version = "0.1.0"
description = "KL3M training data collection and preprocesing from the ALEA Institute"
authors = ["ALEA Institute <hello@aleainstitute.ai>"]
license = "MIT"
readme = "README.md"
homepage = "https://aleainstitute.ai/"
repository = "https://github.com/alea-institute/kl3m-data"
keywords = ["alea", "kl3m", "data", "training data"]

# dist build configuration
include = ["kl3m_data"]
packages = [{ include = "kl3m_data" }]
exclude = ["tests", "docs", "examples", "docker"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0.0"
# license: MIT
alea-dublincore = "^0.1.0"
# license: MIT
rich = "^13.8.1"
# license: BSD-3
httpx = {version ="^0.27.2", extras = ["http2", "socks"]}
# license: Apache-2.0
playwright = "^1.47.0"
# license: BSD-3
lxml = "^5.3.0"
# license: Apache-2.0
boto3 = "^1.35.22"
pypdfium2 = "^4.30.0"
alea-preprocess = "^0.1.10"
tqdm = "^4.66.5"



[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
pytest-benchmark = "^4.0.0"
pytest-cov = "^5.0.0"
pylint = "^3.2.7"


# extras
mypy = "^1.11.2"
[tool.poetry.extras]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint]
max-line-length = 120
disable = [
    "line-too-long",
    "too-few-public-methods",
    "too-many-positional-arguments",
    "no-self-argument",
    "cyclic-import",
    "duplicate-code",
]
extension-pkg-allow-list = ["lxml"]
ignore-patterns = ["test_.*?.py", "conftest.py"]

[tool.pylint.messages_control]
max-args = 10
max-attributes = 15
max-branches = 15
max-locals = 25
min-public-methods = 0
disable = ['W0511']

[tool.isort]
profile = "black"
line_length = 120

[tool.pytest.ini_options]
addopts = "--cov=kl3m_data --cov-report=term-missing --cov-report=xml --cov-report=html"

[tool.mypy]
ignore_missing_imports = true
